@@ -80,6 +80,7 @@ fixed bugs:
 - fixed bug in vars.c which handled arrays with parts of original variables during resolving to active variables (using SCIPvarsGetProbvarBinary) wrong
 - fixed bug in reader_gms.c: linear coefficients for quadratic variables were not printed if they had no square-coefficient
 - fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation
+- fixed bug in heur_subnlp when forbidding a particular combination of integer variables in the main problem
 
 plugins:
 - added vbound heuristic (heur_vbounds.{c,h})
